Fixes for search box layout on rhyme on mobile

--- a/rhyme/static/rhyme/style/structure.less
+++ b/rhyme/static/rhyme/style/structure.less
@@ -61,36 +61,26 @@ body > .loading {
     margin: @spacingWide;
 
     .post-nav-left {
-        position: fixed;
-        top: @navHeight + @spacingWide;
-        bottom: @spacingWide;
-        overflow-y: auto;
-        width: 16%;    // col-md-2
-
         > * {
             margin-bottom: 5px;
         }
 
-        @media (max-width: 767px) {
-            position: static;
-            width: auto;
-            bottom: auto;
-            overflow-y: visible;
-        }
-    }
-
-    .post-nav-right {
-        .item-page {
+        @media (min-width: 992px) {
             position: fixed;
             top: @navHeight + @spacingWide;
             bottom: @spacingWide;
             overflow-y: auto;
+            width: 16%;    // col-md-2
+        }
+    }
 
-            @media (max-width: 767px) {
-                position: static;
-                top: auto;
-                bottom: auto;
-                overflow-y: visible;
+    .post-nav-right {
+        @media (min-width: 992px) {
+            .item-page {
+                position: fixed;
+                top: @navHeight + @spacingWide;
+                bottom: @spacingWide;
+                overflow-y: auto;
             }
         }
     }
